# intelehealth-ai-models

./: MLFLOW_PERSISTENCE_GUIDE.md  README.md  ayu_data_diagnosis_bar_plot.py  corrected_human_llm_comparison.py  create_diagnosis_mapping.py  ddx_client.py  ddx_full_concordance_plot.md  ddx_full_concordance_plot.py  ddx_openai_concordance_plot.py  ddx_server.py  deepseek_request.py  diagnosis_mapping.py  google_med_vertex.py  google_medlm.py  ih-ddx-bsr.py  ih-ddx-cot-gemini.py  ih-ddx-cot-llama405B.py  ih-ddx-cot-nas-unseen-data-infer-results.py  ih-ddx-cot-nas-unseen-data-local-oss-llm-infer.py  ih-ddx-cot-nas-unseen-data-v2-infer-results.py  ih-ddx-cot-test.py  ih-ddx-cot.py  ih-ddx-infer.py  ih-ddx-qwen-2.5-3B-local-compile.py  ih-dspy-cot-optimizer.py  ih-dspy-react-optimizer.py  ih-dspy.py  llm_filtered_unmatched_ddx_analysis.py  llm_judge_concordance_analysis.py  llm_medical_judge.py  llm_quest_automate.py  merge_llm_judge_csv.py  patient_story_api.py  plot_human_vs_llm_ranks.py  plot_human_vs_llm_top1_ranks.py  plot_human_vs_llm_top2_ranks.py  plot_human_vs_llm_top3_ranks.py  plot_human_vs_llm_top4_ranks.py  plot_human_vs_llm_top5_ranks.py  prompt_config.py  (+3 more)
GRPO_Reasoning_Trainer/: batch_inference_nas_v2.py  grpo_llama3.1_8b_inference.py  grpo_trainer.py  grpo_trainer_llama3.1_8b_instruct.py  grpo_trainer_llama3.1_8b_unsloth.py  grpo_trainer_qwen3_8b_resume_from_hub.py  grpo_trainer_qwen3_8b_runpod_a100.py  prepare_grpo_data.py  process_grpo_output.py  requirements.txt  test_grpo_model.py
GRPO_Trainer/: README.md  agent.py  config.py  environment.py  predict.py  (+9 more)
(+68 files in other folders)
